# exesexe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  exesexe.py  pyproject.toml  requirements.txt  setup.py  tasks.py  tox.ini
.github/workflows/: main.yaml
tests/: test_exesexe.py
